--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,6 +2,7 @@
   "name": "カスタムメトロノーム - ポリリズム対応",
   "short_name": "メトロノーム",
   "description": "高度なポリリズム機能とテンポカーブ編集が可能なメトロノームアプリ",
+  "version": "1.1.0",
   "id": "/",
   "start_url": "/",
   "display": "standalone",
